--- a/Projektvecka.css
+++ b/Projektvecka.css
@@ -3,6 +3,10 @@
     padding: 0;
     box-sizing: border-box;
   }
+
+header{
+  text-align: center;
+}
  
   body {
     font-family: "Century Gothic", 'Lato', sans-serif;
