--- a/Projektvecka.css
+++ b/Projektvecka.css
@@ -1,3 +1,77 @@
+body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+    background: #202020;
+    color: white;
+    min-height: 300vh;
+  }
+ 
+ 
+  h1 {
+    margin: 20px 0;
+    font-size: 32px;
+    color: white;
+  }
+ 
+  table {
+    width: 90%;
+    margin: auto;
+    border-collapse: separate;
+    border-spacing: 20px;
+  }
+ 
+  td {
+    background: #ff8dcc;
+    border-radius: 16px;
+    padding: 20px;
+    text-align: center;
+    box-shadow: 0px 4px 10px rgba(0,0,0,0.35);
+  }
+ 
+  td img {
+    border-radius: 12px;
+    height: 200px;      
+    object-fit: cover;  
+  }
+ 
+
+
+  h3 {
+    margin-top: 15px;
+    font-size: 20px;
+  }
+ 
+ 
+  td p {
+    color: #dddddd;
+    font-size: 14px;
+  }
+ 
+  small {
+    color: #ccc;
+    margin-top: 10px;
+    display: inline-block;
+  }
+ 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 * {
     margin: 0;
     padding: 0;
@@ -12,11 +86,6 @@ header{
   text-align: center;
 }
  
-  body {
-    font-family: "Century Gothic", 'Lato', sans-serif;
-    background: #f5f5f5;
-    min-height: 300vh;
-  }
  
   a {
     text-decoration: none;
