--- a/Projektvecka.css
+++ b/Projektvecka.css
@@ -16,6 +16,7 @@ header{
     font-family: "Century Gothic", 'Lato', sans-serif;
     background: #f5f5f5;
     min-height: 300vh;
+    color: lightpink;
   }
  
   a {
@@ -24,12 +25,15 @@ header{
 
   .textruta{
     position: absolute;
-    height: 350px;
-    width: 200px;
+    left: 35px;
+    top: 100px;
+    height: 250px;
+    width: 250px;
     background: linear-gradient(-45deg, #d36ae1, #a078ef, #7d75ee, #b4d0fd, #daf4ff, #ededed);
     border-radius: 50px;
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
     transition: transform 0.4s ease;
+    
 }
  
   .et-hero-tab {
