--- a/Projektvecka.css
+++ b/Projektvecka.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     font-family: Arial, sans-serif;
     background: #202020;
-    color: white;
+    color: lightpink;
     min-height: 300vh;
   }
  
