--- a/Projektvecka.css
+++ b/Projektvecka.css
@@ -30,8 +30,10 @@ body {
  
   td img {
     border-radius: 12px;
-    height: 200px;      
-    object-fit: cover;  
+    width: 100%;
+    height: auto;      
+    object-fit: cover; 
+    max-height: 300px; 
   }
  
 
