--- a/Projektvecka.css
+++ b/Projektvecka.css
@@ -27,6 +27,10 @@ body {
     text-align: center;
     box-shadow: 0px 4px 10px rgba(0,0,0,0.35);
   }
+
+  td:hover{
+    scale: 1.05;
+  }
  
   td img {
     border-radius: 12px;
