--- a/Projektvecka.css
+++ b/Projektvecka.css
@@ -197,13 +197,16 @@ nav button{
     bottom: -300px;
     left: 50%;
     transform: translateX(-50%);
-    width: 400px;
+    width: 600px;
     max-width: 90%;
-    background-color: white;
-    border: 2px solid #ddd;
-    border-radius: 10px;
-    box-shadow: 0 -5px 20px rgba(0, 0, 0, 0.2);
+    height: 500px;
+    background: rgba(255, 255, 255, 0.15); /* transparent white */
+    border-radius: 15px;
     padding: 20px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(10px);           /* main glass effect */
+    -webkit-backdrop-filter: blur(10px); 
     transition: right 0.4s ease-in-out;
     z-index: 1000;
 }
