--- a/Projektvecka.css
+++ b/Projektvecka.css
@@ -194,7 +194,7 @@ nav button{
 
   .textbox-container {
     position: fixed;
-    bottom: -300px;
+    bottom: auto;
     left: 50%;
     transform: translateX(-50%);
     width: 600px;
@@ -207,7 +207,7 @@ nav button{
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(10px);           /* main glass effect */
     -webkit-backdrop-filter: blur(10px); 
-    transition: right 0.4s ease-in-out;
+    transition: right 0.2s ease-in-out;
     z-index: 1000;
 }
 
@@ -218,7 +218,7 @@ nav button{
 .textbox-header {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: right;
     margin-bottom: 15px;
 }
 
