--- a/Projektvecka.css
+++ b/Projektvecka.css
@@ -195,8 +195,8 @@ nav button{
   .textbox-container {
     position: fixed;
     bottom: auto;
-    right: 10%;
-    transform: translateX(-50%);
+    right: 20px;
+    transform: translateX(-1%);
     width: 600px;
     max-width: 90%;
     height: 500px;
