--- a/Projektvecka.css
+++ b/Projektvecka.css
@@ -108,8 +108,11 @@ button{
   0 10px 28px rgba(28, 28, 28, 0.6);
 }
 header, .title-wrap{
-  text-align:center;         /* center the box on the page */
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%);       /* center the box on the page */
   margin: 44px 0;
+  z-index: 1000;
 }
 
 
@@ -269,3 +272,4 @@ nav button{
       font-size: 1rem;
     }
   }
+
