--- a/Projektvecka.css
+++ b/Projektvecka.css
@@ -108,11 +108,8 @@ button{
   0 10px 28px rgba(28, 28, 28, 0.6);
 }
 header, .title-wrap{
-  position: absolute;
-  left: 50%;
-  transform: translate(-50%);       /* center the box on the page */
+  text-align:center;         /* center the box on the page */
   margin: 44px 0;
-  z-index: 1000;
 }
 
 
@@ -198,8 +195,9 @@ nav button{
 
   .textbox-container {
     position: fixed;
-    bottom: -600px;
+    bottom: auto;
     right: 20px;
+    transform: translateX(-1%);
     width: 600px;
     max-width: 90%;
     height: 520px;
@@ -272,3 +270,4 @@ nav button{
     }
   }
 
+  
