--- a/Projektvecka.css
+++ b/Projektvecka.css
@@ -43,7 +43,7 @@ button{
  
  
   h1 {
-    position: fixed;
+    position: relative;
     margin: 20px -175px;
     font-size: 32px;
     color: lightpink;
@@ -109,8 +109,7 @@ button{
 }
 header, .title-wrap{
   position: absolute;
-  left: 50%;
-  transform: -50%;         /* center the box on the page */
+  left: 45.5%;         /* center the box on the page */
   margin: 24px 0;
   z-index: 1000;
 }
