--- a/Projektvecka.css
+++ b/Projektvecka.css
@@ -22,7 +22,7 @@ radial-gradient(1200px 600px at 85% 90%, var(--bg2), #000000);
 }
 
 #logga{
-  position: fixed;
+  position: absolute;
   top: 20px;
   left: 20px;
   width: 80px;
@@ -31,6 +31,7 @@ radial-gradient(1200px 600px at 85% 90%, var(--bg2), #000000);
 }
 
 .chip2{
+position: relative;
 right: 270px;
 top: 35px;
 }
