--- a/Projektvecka.css
+++ b/Projektvecka.css
@@ -31,8 +31,8 @@ radial-gradient(1200px 600px at 85% 90%, var(--bg2), #000000);
 }
 
 .chip2{
-position: fixed;
-right: 270px;
+position: absolute;
+right: -270px;
 top: 35px;
 }
 
