--- a/Projektvecka.css
+++ b/Projektvecka.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     font-family: Arial, sans-serif;
-    background: black !important;
+    background: #000000 !important;
     color: lightpink;
     min-height: 300vh;
   }
